<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_card_white"
    android:paddingTop="@dimen/_6sdp"
    android:paddingBottom="@dimen/_6sdp"
    android:paddingEnd="@dimen/_10sdp"
    android:paddingStart="@dimen/_10sdp"

    android:layout_marginTop="@dimen/_10sdp"
    android:gravity="center_vertical">



    <!-- Check-in & Check-out Information -->
    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center_vertical">

        <LinearLayout

            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/club_name"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12sdp"
                android:alpha="0.6"
                android:textColor="@color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtClubName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/black" />



        </LinearLayout>




    </RelativeLayout>

    <View
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/view_line"/>

    <RelativeLayout
        android:layout_marginTop="@dimen/_10sdp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center_vertical">

        <LinearLayout

            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12sdp"
                android:alpha="0.6"
                android:textColor="@color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtCourseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black" />



        </LinearLayout>




    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/_10sdp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center_vertical">

        <LinearLayout

            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12sdp"
                android:alpha="0.6"
                android:textColor="@color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black" />



        </LinearLayout>






    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/_10sdp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center_vertical">

        <LinearLayout

            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12sdp"
                android:alpha="0.6"
                android:textColor="@color/black"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/black" />



        </LinearLayout>






    </RelativeLayout>

</LinearLayout>
